# 2048

./: Cargo.toml  README.md  boards.txt  libs.txt  result.txt  results.csv  results_3x3.csv  results_4x4.csv
2048-3d/2048-3d/: index.html
2048-3d/2048-3d/js/: game_manager.js
2048-3d/2048-3d/style/: main.css
experiments/: game_4x4_depth_4_num_of_states_explored
results/: expectimax_4X4_mainUtility_depth3_99.txt  expectimax_4X4_snakeUtility_depth2_150.txt  expectimax_4X4_snakeUtility_depth3_99.txt  expectimax_4x4_maxTileAverage_depth3.csv  expectimax_4x4_maxTileAverage_depth4.csv  expectimax_4x4_sumTilesAverage_depth3.csv  expectimax_4x4_sumTilesAverage_depth4.csv  expectimax_5x5_maxTilesAverage_depth3.csv  expectimax_grid4x4_depth3_utility_distance_maxtile_average.csv  random_4x4.csv  random_5x5.csv
src/: algorithm.rs  board.rs  display.rs  game.rs  main.rs  strategies.rs  three_d_game.rs
src/strategies/: expectimax.rs  expectimax_three_d.rs  mod.rs  strategy.rs
