[package]
name = "2048"
description = "A cli implementation of the popular 2048 game writen in rust"
version = "0.5.2"


[dependencies]
matrix_display = "1.0.0"
rand = "0.8.4"

clippy = { version = "*", optional = true }
crossterm = "0.23.0"
rand_xoshiro = "0.6.0"

[features]
default = []

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
